# ChangeLog for dev-ruby/ruby-mp3info
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-mp3info/ChangeLog,v 1.11 2009/04/14 17:45:14 graaff Exp $

  14 Apr 2009; Hans de Graaff <graaff@gentoo.org> -ruby-mp3info-0.4.ebuild,
  -ruby-mp3info-0.5.ebuild, -ruby-mp3info-0.5.1.ebuild:
  Remove old versions.

*ruby-mp3info-0.6.10 (20 Dec 2008)

  20 Dec 2008; Hans de Graaff <graaff@gentoo.org>
  +ruby-mp3info-0.6.10.ebuild:
  Version bump

  18 Sep 2007; Hans de Graaff <graaff@gentoo.org> -ruby-mp3info-0.3.ebuild:
  Remove old version

*ruby-mp3info-0.5.1 (18 Sep 2007)

  18 Sep 2007; Hans de Graaff <graaff@gentoo.org>
  +ruby-mp3info-0.5.1.ebuild:
  Version bump:
  * ADDED: Mp3Info#reload method to reload the file from the disk
  * FIXED: bug [#2604] Not able to delete tag1
  * FIXED: bug #3401 'id3v2.rb dies when trying to read a certain mp3'
  * FIXED: bug #2957 'Error message "Can't define singleton"'
  * FIXED: bug #3068 'require_gem ("ruby-mp3info") doesn't works'
  * FIXED: bug #11967 "Leading 'h' from 'http://' gets chopped on URL fields"
  * PATCHED: with patch #3157 'Fix for 64 bit Ruby'
  
  The last patch also fixes Gentoo bug #185711, thanks to James Le Cuirot for
  reporting and tracking the issue.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> ruby-mp3info-0.5.ebuild:
  Mark 0.5 ~ia64

  10 Jan 2006; Grant Goodyear <g2boojum@gentoo.org> ruby-mp3info-0.5.ebuild:
  Add ~amd64 keyword

*ruby-mp3info-0.5 (06 Dec 2005)

  06 Dec 2005; Michael Kohl <citizen428@gentoo.org>
  +ruby-mp3info-0.5.ebuild:
  Version bump and switched to gem.

*ruby-mp3info-0.4 (03 May 2005)

  03 May 2005; Michael Kohl <citizen428@gentoo.org>
  +ruby-mp3info-0.4.ebuild:
  Version bump. Added src_test().

  12 Mar 2005; Michael Kohl <citizen428@gentoo.org> ruby-mp3info-0.3.ebuild:
  Marked stable on x86.
