@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ruby-mp3info
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-mp3info/ChangeLog,v 1.11 2009/04/14 17:45:14 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-mp3info/ChangeLog,v 1.12 2009/06/02 05:32:38 graaff Exp $
+
+*ruby-mp3info-0.6.13 (02 Jun 2009)
+
+  02 Jun 2009; Hans de Graaff <graaff@gentoo.org>
+  +ruby-mp3info-0.6.13.ebuild:
+  Version bump with various bug fixes.
 
   14 Apr 2009; Hans de Graaff <graaff@gentoo.org> -ruby-mp3info-0.4.ebuild,
   -ruby-mp3info-0.5.ebuild, -ruby-mp3info-0.5.1.ebuild:
